syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.lucasmiguins.grpc";
option java_outer_classname = "PixKeymanagerGrpc";
option objc_class_prefix = "HLW";

import "google/protobuf/timestamp.proto";

package br.com.zup.lucasmiguins;

service KeymanagerRegistraGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeymanagerRemoveGrpcService {
  rpc remove (RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeymanagerConsultaGrpcService {
  rpc consulta(ConsultaChavePixRequest) returns (ConsultaChavePixResponse) {}
}

service KeymanagerListaGrpcService {
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

enum EnumTipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum EnumTipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}


// Registra
message RegistraChavePixRequest {
  string clienteId = 1;
  EnumTipoDeChave tipoDeChave = 2;
  string chave = 3;
  EnumTipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}


// Remove
message RemoveChavePixRequest {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}


// Consulta
message ConsultaChavePixRequest {
  message FiltroPorPixId {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro {
    FiltroPorPixId pixId = 1;
    string chave = 2;
  }
}

message ConsultaChavePixResponse {

  message ChavePix {

    message ContaInfo {
      EnumTipoDeConta tipo = 1;
      string instituicao = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    EnumTipoDeChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}


// Lista
message ListaChavesPixRequest {
  string clienteId = 1;
}

message ListaChavesPixResponse {

  message ChavePix {
    string pixId = 1;
    EnumTipoDeChave tipo = 2;
    string chave = 3;
    EnumTipoDeConta tipoDeConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId = 1;
  repeated ChavePix chaves = 2;
}